# Index-2.0

./: CHANGELOG  COPYING  Makefile  Makefile.in  NEWS  README.md  config.h.in  configure  configure.ac  indentRule  index
Devel/: Makefile.orig  Makefile~  setMalloc.sh
Doc/: CHANGELOG  INSTALL  NEWS  PORTING  PORTING~  README  index.html
Doc/backup/: COPYING~  INSTALL~  NEWS~  README~
LICENSES/: NcursesLicence.txt
man1/: index.1  index.1~
original/: IndexPrecursory.txt  MANIFEST  PART01  PART02  part1.sh  part2.sh
original/sourcefiles/: MANIFEST  Makefile  README  createdb.c  dbfunc.c  dbio.c  defs.h  index.1  main.c  printdb.c  screen.c  searchdb.c  selectdb.c  util.c
original/sourcefiles/samples/: books.fmt  bphone.idx  cdlist.fmt  pphone.idx
samples/: books.idx  cdwantlist.fmt  cdwantlist.idx  pphone.fmt
src/: .dbfilename.c.swp  .dbio.c.swp  .dbselect.c.swp  .defs.h.swp  .main.c.swp  .screen.c.swp  .unicodeToUtf8.c.swp  .unicodeToUtf8.h.swp  Makefile.in  common.h  dbcreate.c  dbcreate.h  dbfilename.c  dbfilename.c~  dbfilename.h  dbfilename.h~  dbfunc.c  dbfunc.c~  dbfunc.h  dbio.c  dbio.c~  dbio.h  dbprint.c  dbprint.c~  dbprint.h  dbsearch.c  dbsearch.c~  dbsearch.h  dbselect.c  dbselect.c~  dbselect.h  defs.h  defs.h~  initcurses.c  initcurses.h  main.c  main.c~  screen.c  screen.c~  screen.h  (+9 more)
src/curses/: curses.h
